--- a/css/style.css
+++ b/css/style.css
@@ -20,71 +20,102 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position:sticky;
+  position: sticky;
   padding: 10px;
   background-color: aqua;
-  
 }
 /*MAIN*/
 
 /*FIRST SECTION*/
-.all-you-need{
-    background-color: rgb(137, 163, 163);
-    padding: 20px 0px;
+.all-you-need {
+  background-color: rgb(137, 163, 163);
+  padding: 20px 0px;
 }
-.all-you-need > .container{
-    min-height: 600px;
-    background-color: rgb(74, 119, 119);
-    padding: 0px;
-    position: relative;
-    top: 100px;
+.all-you-need > .container {
+  min-height: 600px;
+  background-color: rgb(74, 119, 119);
+  padding: 0px;
+  position: relative;
+  top: 100px;
 }
-.container .title{
-    width: 100%;
-    min-height: 100px;
-    background-color: rgb(41, 77, 77);
+.container .title {
+  width: 100%;
+  min-height: 100px;
+  background-color: rgb(41, 77, 77);
 }
-.all-you-need.content{
-    display: flex;
-    background-color: azure;
-    padding: 0px;
+.all-you-need.content {
+  display: flex;
+  background-color: azure;
+  padding: 0px;
 }
-.all-you-need.text{
-flex-basis: 50%;
-background-color: rgb(98, 98, 134);
+.all-you-need.text {
+  flex-basis: 50%;
+  background-color: rgb(98, 98, 134);
 }
-.all-you-need.img{
-flex-basis: 50%;
-min-height: 400px;
-background-color: blueviolet;
+.all-you-need.img {
+  flex-basis: 50%;
+  min-height: 400px;
+  background-color: blueviolet;
 }
 /*SECOND SECTION*/
-.business-plane{
-    background-color: cadetblue;
-    padding: 20px 0px;
+.business-plane {
+  background-color: cadetblue;
+  padding: 20px 0px;
 }
-.business-plane .container{
-    min-height: 600px;
-    margin-top: 100px;
+.business-plane .container {
+  min-height: 600px;
+  margin-top: 100px;
 }
-.business-plane.title{
-    width: 100%;
-    min-height: 50px;
-    background-color: blueviolet;
+.business-plane.title {
+  width: 100%;
+  min-height: 50px;
+  background-color: blueviolet;
 }
-.plane{
+.plane {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: stretch;
+  gap: 49px;
+  min-height: 400px;
+}
+.card-container {
+  flex-basis: 30%;
+  background-color: rgb(76, 99, 133);
+}
+.card-header {
+  background-color: brown;
+  min-height: 20px;
+}
+.card-body {
+  background-color: bisque;
+}
+.team-container {
+  margin-top: 20px;
+  min-height: 300px;
+  background-color: rgb(39, 171, 175);
+}
+.team-header {
+  background-color: burlywood;
+}
+.body-header {
+  background-color: beige;
+}
+/*partner*/
+.partner{
+    background-color: darkgrey;
+    padding-top: 20px;
+}
+.partner > .container{
     display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
     justify-content: center;
-    align-items: center;
-    gap: 49px;
-    
-
-
+    min-height: 300px;
 }
-.card-container{
-    flex-basis: 30%;
-    background-color: rgb(76, 99, 133);
-    
+.column-l{
+    flex-basis: 70%;
+    background-color: brown;
+}
+.column-s{
+    flex-basis:30% ;
+    background-color: aquamarine;
 }
