--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,97 @@ img {
     background-color: azure;
     min-height: 200px;
 }
+/*BUNNER*/
+.bunner{
+    min-height: 800px;
+    background-color: darkkhaki;
+    padding-top: 20px;
+}
+.bunner > .container{
+    width: 100%;
+    background-color: brown;
+    min-height: 800px;
+    padding: 0%;
+}
+.first-row{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0px;
+    justify-content: center;
+    align-items: stretch;
+    min-height: 500px
+    
+}
+.column-left{
+    border: 1px solid black;
+    background-color: rosybrown;
+    flex-basis: 33.33%;
+
+}
+.column-center{
+    border: 1px solid black;
+    background-color: darkkhaki;
+    flex-basis: 33.33%;
+}
+.column-right{
+    border: 1px solid black;
+    background-color: darkorchid;
+    flex-basis: 33.33%;
+}
+.second-row{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    background-color: darkred;
+    min-height: 200px;
+}
+.prenota{
+    width: 300px;
+    height: 70px;
+    background-color: aquamarine;
+}
+.button-prenota{
+    width: 300px;
+    height: 70px;
+    background-color: aquamarine;
+}
+
+/*footer*/
+
+/*footer*/
+
+.page-sectionsection-footer > .container {
+    
+  }
+  .page-sectionsection-footer {
+    background-color: rgb(35, 39, 42);
+    color: rgb(255, 255, 255);
+  }
+ 
+  
+  .footer-column {
+    display: flex;
+    flex-basis: 20%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 20px 0px;
+    align-items: center;
+  }
+ 
+  
+  
+ .link-list{display: inline;}
+  
+  .footer-items {
+  
+    list-style: none;
+    padding: 15px 0px;
+  }
+  
+ 
+  .footer-items > a {
+    text-decoration: none;
+    text-align: left;
+    color: white;
+  }
+  
