--- a/css/style.css
+++ b/css/style.css
@@ -10,19 +10,32 @@
   width: 1000px;
   max-width: 100%;
 }
-img {
-  width: 100%;
-  display: block;
-}
+
+a{text-decoration: none;}
 /*HEADER*/
 .header .container {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
+  position: fixed;
+  z-index: 1;
   padding: 10px;
-  background-color: aqua;
+  background-color: rgb(255, 255, 255);
+}
+.nav-left{
+    display: flex;
+    align-items: center;
+}
+.nav-link ,.nav-right , a{
+    padding: 5px 10px;
+    display: inline;
+    text-decoration: none;
+    list-style: none;
+    color: black; 
+}
+.btn.accedi{
+    display: inline;
 }
 /*MAIN*/
 
