--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,9 @@
 a {
   text-decoration: none;
 }
-
+img {
+  width: 100%;
+}
 /*HEADER*/
 .header .container {
   width: 100%;
@@ -44,6 +46,9 @@ a {
 .btn.accedi {
   display: inline;
 }
+.logo-header{
+    width: auto;
+}
 /*MAIN*/
 
 /*FIRST SECTION*/
@@ -68,14 +73,11 @@ a {
   background-color: azure;
   padding: 0px;
 }
-.hero-text-container{
-   flex-basis: 40%;
+.hero-text-container {
+  flex-basis: 40%;
 }
 
 .hero.img {
-  flex-basis: 50%;
-  min-height: 400px;
-  background-color: blueviolet;
 }
 /*SECOND SECTION*/
 .business-plane {
@@ -106,16 +108,16 @@ a {
   flex-basis: 30%;
   background-color: rgb(76, 99, 133);
 }
+
 .card-header {
-  background-color: brown;
-  min-height: 20px;
+  border: 1px solid black;
+  text-align: center;
 }
 .card-body {
-  background-color: bisque;
+  border: 1px solid black;
 }
 .team-container {
   margin-top: 20px;
-  min-height: 300px;
   background-color: rgb(39, 171, 175);
 }
 .team-header {
