--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a {
 
 /*second SECTION*/
 .hero {
-  background-color: rgb(137, 163, 163);
+  background-color: rgb(180, 208, 231);
   padding: 20px 0px;
 }
 .hero > .container {
@@ -84,7 +84,7 @@ a {
 }
 /*SECOND SECTION*/
 .business-plane {
-  background-color: cadetblue;
+  
   padding: 20px 0px;
 }
 .business-plane .container {
@@ -206,22 +206,15 @@ a {
   background-color: darkorchid;
   flex-basis: 33.33%;
 }
-.second-row {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: darkred;
-  min-height: 200px;
+
+.prove{
+    background-color: rgb(180, 208, 231);
+    padding: 100px 0px;
 }
-.prenota {
-  width: 300px;
-  height: 70px;
-  background-color: aquamarine;
-}
-.button-prenota {
-  width: 300px;
-  height: 70px;
-  background-color: aquamarine;
+.prove .container{
+    display: flex;
+    justify-content: space-between;
+    
 }
 
 /*footer*/
