--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   width: 1000px;
   max-width: 100%;
 }
+/*UTILS*/
 
 a {
   text-decoration: none;
@@ -208,7 +209,7 @@ padding:15px 0px;
 }
 
 
-/*BOH*/
+/*PASS*/
 .pass {
   min-height: 400px;
 }
@@ -216,10 +217,17 @@ padding:15px 0px;
   background-color: azure;
   min-height: 200px;
 }
+.pass .container h2{
+  padding: 30px 0px 50px 0px;
+}
+.pass .container a{
+  color:rgb(46, 24, 126);
+  padding: 0%;
+  text-decoration: underline;
+}
 /*BUNNER*/
 .bunner {
   min-height: 800px;
-  background-color: darkkhaki;
   padding-top: 20px;
 }
 .bunner > .container {
@@ -243,7 +251,6 @@ padding:15px 0px;
 }
 .column-center {
   border: 1px solid black;
-  background-color: darkkhaki;
   flex-basis: 33.33%;
 }
 .column-right {
@@ -251,22 +258,29 @@ padding:15px 0px;
   background-color: darkorchid;
   flex-basis: 33.33%;
 }
-
-.prove {
+/*PROVE*/
+.Prove {
   background-color: rgb(180, 208, 231);
   padding: 100px 0px;
 }
-.prove .container {
+.prove-container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  color: rgb(80, 12, 32);
+}
+.button-prove{
+  padding: 30px 0px;
+}
+/*ASK*/
+.container > .question{
+  padding:30px 0px;
+ border-top: 1px solid gray;
+ border-bottom: 1px solid gray;
 }
 
 /*footer*/
 
-/*footer*/
-
-.page-sectionsection-footer > .container {
-}
 .page-sectionsection-footer {
   background-color: rgb(35, 39, 42);
   color: rgb(255, 255, 255);
@@ -279,10 +293,6 @@ padding:15px 0px;
   flex-wrap: wrap;
   padding: 20px 0px;
   align-items: center;
-}
-
-.link-list {
-  display: inline;
 }
 
 .footer-items {
