--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ a {
 }
 img {
   width: 100%;
+  display: block;
 }
 li {
   list-style: none;
@@ -33,6 +34,13 @@ h3{
 h4{
     font-size: 0.9rem;
     font-weight: 400;
+}
+
+.btn{
+  padding: 5px 10px;
+  background-color: rgb(35, 35, 226);
+    color: white;
+    border: 0px;
 }
 
 /*HEADER*/
@@ -67,13 +75,14 @@ a {
 }
 section{
     padding: 30px 0px;
+    
 }
-/*MAIN*/
 
-/*hero SECTION*/
+
+/*HERO SECTION*/
 .hero-section {
   background-color: rgb(180, 208, 231);
-  padding: 20px 0px;
+
 }
 .hero-section > .container {
   min-height: 600px;
@@ -95,33 +104,28 @@ section{
 .hero-text-container {
   flex-basis: 40%;
 }
-
-/*SECOND SECTION*/
-
-.business-plane .container {
-  min-height: 600px;
-  margin-top: 100px;
-  
+.hero.text , .btn.hero{
+  margin-bottom: 20px ;
 }
-.business-plane{
-    width: 100%;
+.arrow{
+  font-size: 3rem;
+  padding-top: 30px;
 }
+.hero-img{
+  width: 60%;
+}
+/*BUSINESS PLAN*/
 
 .input{
     margin: 30px 30px;
 }
-
 .plane,
 .option-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: stretch;
   gap: 49px;
   min-height: 400px;
-}
-.plane{
-  align-items: stretch;
 }
 .card-container,
 .option-card {
@@ -129,15 +133,13 @@ section{
   align-self: stretch;
   border: 1px solid lightgray;
 }
-
 .card-header {
   border: 1px solid lightgray;
   text-align: center;
   padding: 10px;
 }
 .card-body{
-  
-  padding: 30px 15px;
+  padding: 30px 20px;
 }
 .duration{
     color: gray;
@@ -148,11 +150,7 @@ padding:15px 0px;
 .btn.card{
     margin: 20px 0px;
 }
-
-/*team*/
-.team .container {
-  padding-top: 20px;
-}
+/*TEAM*/
 .team-header {
   border: 1px solid lightgray;
   text-align: center;
@@ -169,17 +167,14 @@ padding:15px 0px;
   font-weight: 600;
 }
 
-/*partner*/
+/*PARTNER*/
 
 .partner-container {
   display: flex;
   justify-content: center;
   
 }
-.partner-title{
-  padding: 20px 0px;
-}
-.partner-subtitle{
+.partner-subtitle,.partner-subtitle{
   padding: 20px 0px;
 }
 
@@ -192,11 +187,8 @@ padding:15px 0px;
   flex-basis: 30%;
   
 }
-/*OTIONS*/
+/*OFFERT*/
 
-.option {
-  padding-top: 20px;
-}
 .option-title{
   padding:30px 0px;
 }
@@ -207,16 +199,8 @@ padding:15px 0px;
   padding:20px;
   border: 0px;
 }
-
-
 /*PASS*/
-.pass {
-  min-height: 400px;
-}
-.pass .container {
-  background-color: azure;
-  min-height: 200px;
-}
+
 .pass .container h2{
   padding: 30px 0px 50px 0px;
 }
@@ -226,37 +210,31 @@ padding:15px 0px;
   text-decoration: underline;
 }
 /*BUNNER*/
-.bunner {
-  min-height: 800px;
-  padding-top: 20px;
-}
-.bunner > .container {
+
+.brand > .container {
   width: 100%;
-  background-color: brown;
-  min-height: 400px;
   padding: 0%;
 }
-.first-row {
+.row{
+  display:flex
+}
+.column-center{
+  padding: 60px;
+  
+}
+
+.column-left , .column-center, .column-right{
   display: flex;
   flex-wrap: wrap;
-  gap: 0px;
+  width: calc(100vw / 3);
+  height: calc(100vw / 3);
+}
+.column-left .brand-square , .column-right .brand-square{
+  width: 50%;
+  display: flex;
   justify-content: center;
-  align-items: stretch;
-  min-height: 500px;
-}
-.column-left {
-  border: 1px solid black;
-  background-color: rosybrown;
-  flex-basis: 33.33%;
-}
-.column-center {
-  border: 1px solid black;
-  flex-basis: 33.33%;
-}
-.column-right {
-  border: 1px solid black;
-  background-color: darkorchid;
-  flex-basis: 33.33%;
+  align-items: center;
+  padding: 20px;
 }
 /*PROVE*/
 .Prove {
@@ -281,7 +259,7 @@ padding:15px 0px;
 
 /*footer*/
 
-.page-sectionsection-footer {
+.footer{
   background-color: rgb(35, 39, 42);
   color: rgb(255, 255, 255);
 }
@@ -304,4 +282,7 @@ padding:15px 0px;
   text-decoration: none;
   text-align: left;
   color: white;
+}
+.footer-items.title{
+  padding-left: 10px;
 }
