--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ a {
   justify-content: center;
   align-items: center;
   padding: 20px;
+  color: white;
 }
 .red{
   background-color: red;
@@ -241,7 +242,7 @@ a {
 background-color: rgb(82, 19, 32);
 }
 .blu{
-  background-color: blu;
+  background-color:blue;
 }
 .yellow{
   background-color: yellow;
