--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
 a {
   text-decoration: none;
 }
+a:hover{
+  text-decoration: underline;
+}
 img {
   width: 100%;
   display: block;
@@ -40,6 +43,10 @@ h4 {
   background-color: rgb(35, 35, 226);
   color: white;
   border: 0px;
+}
+.btn:hover{
+  border: 1px solid black;
+  cursor: pointer;
 }
 section {
   padding: 40px 0px;
@@ -308,6 +315,9 @@ background-color: rgb(82, 19, 32);
   text-decoration: none;
   text-align: left;
   color: white;
+}
+.footer-items > a:hover{
+  text-decoration: underline;
 }
 .footer-items.title {
   padding-left: 10px;
